Remove lockfile incompatibility due to a setting
The `lockfile_uses_separate_rubygems_sources` was causing a lockfile
incompatibility but in my opinion, this incompatibility is not necessary
in the general case.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
     - trying
     - /.+-dev$/
     - /.+-stable$/
+    - separate_rubygems_sources_in_lockfile
 
 notifications:
   slack:
